# kuka_interface

./: .gitignore  LICENSE  README.md
iliad_manipulation_demo/Trajectory/funzioni_accessorie/: generate_waypoint.m  generate_waypoint_left.m  generate_waypoint_right.m  get_initial_pos_left.m  get_initial_pos_right.m  get_x_left.m  get_x_right.m  line_traj_left.m  line_traj_right.m  spline_traj_left.m  spline_traj_right.m  traj_line_.m  traj_line_0.m
iliad_manipulation_demo/Trajectory/home_position/: go_home.m  left_home.m  q_out_left_home.mat  q_out_right_home.mat  right_home.m
iliad_manipulation_demo/Trajectory/trajectory/line/: init.m  state_machine.slx
iliad_manipulation_demo/Trajectory/trajectory/yogurt/: init_yogurt.m  state_machine_wip.slx  state_machine_yogurt.slx  state_machine_yogurt_R2017b.slx
iliad_manipulation_demo/force_sensor/: right_rotation_rispetto_alla_mano.m
iliad_manipulation_demo/inverse_kinematic/AUX_functions/: generate_line_points.m  generate_slerp.m  plot_qd.m  skew_2_vect.m
iliad_manipulation_demo/inverse_kinematic/AUX_functions/matlab/paths/: set_folders.m
iliad_manipulation_demo/inverse_kinematic/AUX_functions/robotics/denavit_hartenberg/: T_DH.m  direct_kinematics_DH.m
iliad_manipulation_demo/inverse_kinematic/AUX_functions/robotics/inverse_kinematics/: eo_using_axis_angle.m  eo_using_quat.m
iliad_manipulation_demo/inverse_kinematic/AUX_functions/robotics/rotation_matrices/: n_and_theta_from_R.m
iliad_manipulation_demo/inverse_kinematic/RP_functions/: damped_pseudo_inverse.m  rank_update.m  reverse_priority.m  reverse_priority_step.m  smooth_function.m  unilateral_constr_activation_check.m
iliad_manipulation_demo/inverse_kinematic/prova_RP/RP_project/: RP_project_paths.m
iliad_manipulation_demo/inverse_kinematic/prova_RP/prova/: TWO_ARMS_read_bag1n2.m  new_sliding.bag  prova1.m  prova2.m
iliad_manipulation_demo/inverse_kinematic/robot_def/RP_specific/: def_JT_handle.m  reverse_priority_7j_z.m  reverse_priority_7j_z_tr.m  reverse_priority_pos.m  reverse_priority_pos_or_7j.m  reverse_priority_pos_or_7j_eeMaxX.m  reverse_priority_pos_or_7j_link3.m
iliad_manipulation_demo/inverse_kinematic/robot_def/robot_def/: KUKA_LWR_geometry_and_direct_kinematics.m  TWO_ARMS_transformations.m  VITO_geometry_and_kinematics.m
iliad_manipulation_demo/inverse_kinematic/robot_def/robot_def/fast_functions/: J_link3_TWO_ARMS_l_or_function.m  J_link3_TWO_ARMS_l_pos_function.m  J_link3_TWO_ARMS_r_or_function.m  J_link3_TWO_ARMS_r_pos_function.m  Jee_TWO_ARMS_l_or_function.m  Jee_TWO_ARMS_l_pos_function.m  Jee_TWO_ARMS_r_or_function.m  Jee_TWO_ARMS_r_pos_function.m  KUKA_LWR_DHtable.m  TWO_ARMS_USED.m  T_link3_TWO_ARMS_l_or_function.m  T_link3_TWO_ARMS_l_pos_function.m  T_link3_TWO_ARMS_r_or_function.m  T_link3_TWO_ARMS_r_pos_function.m  Tee_TWO_ARMS_l_or_function.m  Tee_TWO_ARMS_l_pos_function.m  Tee_TWO_ARMS_r_or_function.m  Tee_TWO_ARMS_r_pos_function.m
kuka_interface_pkg/: CMakeLists.txt  package.xml
kuka_interface_pkg/cfg/: config_tool.cfg
kuka_interface_pkg/include/kuka_interface_pkg/: arms_manager.h  arms_manager_simple.h  commands.h  ee_manager.h  qbmove_communications.h  single_lwr_manager.h
kuka_interface_pkg/launch/: arm_manager_force.launch  manager.launch
kuka_interface_pkg/src/: arms_manager.cpp  arms_manager_node.cpp  arms_manager_simple.cpp  arms_manager_simple_node.cpp  ee_manager.cpp  ee_manager_node.cpp  fake_force_sensor_publisher_node.cpp  homing.cpp  qbmove_communications.cpp  single_lwr_homing.cpp  single_lwr_manager.cpp  single_lwr_manager_node.cpp
matlab_to_ros/: ILIAD_setup.slx  init.m
shared_msgs/: CMakeLists.txt  package.xml
shared_msgs/msg/: CommandTrajectory.msg  FeedbackTrajectory.msg
wrappup_model/: model.urdf  q_0_left.mat  q_0_right.mat
(+143 files in other folders)
