<?xml version="1.0"?>
<package>
  <name>kuka_interface_pkg</name>
  <version>0.0.0</version>
  <description>The kuka_interface_pkg package</description>

  <maintainer email="ale.settimi@gmail.com">Alessandro Settimi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
